<resources>
    <string name="app_name">UdemyNumberComposition</string>
    <string name="rules_game">Правила Игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре, для этого нужно вставить недостающее число.
    Пример: в верхнем круге число 7, в одном из нижных знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно быть число 3, потому что 3 + 4 = 7. </string>
    <string name="ok">Понятно</string>
    <string name="test_level">тестовый</string>
    <string name="choice_level">Выберите уровень</string>
    <string name="progress_answers">Правильных ответов %s (минимум %s)</string>
    <string name="required_score">Необходимое количество правильных ответов: %s</string>
    <string name="score_answers">Ваш счет: %s</string>
    <string name="required_percentage">Необходимый процент правильных ответов: %s</string>
    <string name="score_percentage">Процент правильных ответов: %s</string>
    <string name="retry">Попробовать снова</string>
</resources>